Kubernetes/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: ghcr.io/anggraitowas/shipping-service:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
