Kubernetes/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  selector:
    app: order-service
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
