Kubernetes/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: ecommerce
spec:
  selector:
    app: shipping-service
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
